Fix Stack Overflow template
Corrected string concatenation error. Also some minor changes to getExcerpt().

--- a/css/main.css
+++ b/css/main.css
@@ -199,6 +199,7 @@ input[type="text"] {
     max-width: 100%;
 }
 
+/*
 .vote-box,
 .answer-box {
     width: 58px;
@@ -207,4 +208,8 @@ input[type="text"] {
     color: #6a737c;
     display: block;
     float: left;
+}
+*/
+
+.question-answer-body {
 }
